--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,7 @@ h1 {
 
 .itWork {
   background-color: hsl(0, 100%, 96%);
-  height: 70vh;
+  height: 80vh;
   width: 80%;
   display: flex;
   flex-direction: row;
@@ -107,11 +107,21 @@ h1 {
   font-size: 2rem;
 }
 
-ol li span {
-  font-weight: bold;
-  color: hsl(0, 100%, 50%);
+.functions {
+  padding: 15px;
 }
 
-ol li p {
-  padding: 0 20px;
+.functions span {
+  font-weight: bold;
+  color: hsl(0, 100%, 50%);
+  font-size: 2rem;
+  border-radius: 100%;
+  background-color: white;
+  padding: 1rem 1.3rem;
+  margin-right: 20px;
+}
+
+.functions p {
+  width: 80%;
+  margin-left: 4rem;
 }
