--- a/style/headerAndFooter.css
+++ b/style/headerAndFooter.css
@@ -69,7 +69,7 @@ h2 {
 
 .login-button {
   background-color: hsl(0, 100%, 50%);
-  padding: 10px;
+  padding: 7px 10px;
   border-radius: 25px;
 }
 
@@ -83,7 +83,7 @@ h2 {
 
 .register-button {
   background-color: hsl(0, 0%, 100%);
-  padding: 10px;
+  padding: 7px 10px;
   border-radius: 25px;
   border: 2px solid red;
 }
