--- a/style/headerAndFooter.css
+++ b/style/headerAndFooter.css
@@ -24,7 +24,7 @@ header {
   align-items: center;
 }
 
-h2 {
+.left-header h2 {
   font-family: "Exo 2", serif;
   font-optical-sizing: auto;
   font-weight: 500;
