--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
   scroll-behavior: smooth;
 }
 
-h1 {
+.tittle h1 {
   font-family: "Permanent Marker", serif;
   font-weight: 100;
   font-style: normal;
