--- a/style/login.css
+++ b/style/login.css
@@ -195,6 +195,12 @@ h1 {
   font-weight: bold;
 }
 
+h1 {
+  font-family: "Permanent Marker", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
 @media screen and (max-width: 650px) {
   .container {
     height: calc(100vh - 40px);
