--- a/style/headerAndFooter.css
+++ b/style/headerAndFooter.css
@@ -100,6 +100,11 @@ a {
   text-decoration: none;
 }
 
+footer {
+  width: 100%;
+  height: auto;
+}
+
 .foot {
   margin-top: 5rem;
   display: flex;
@@ -112,9 +117,18 @@ a {
 .foot h4 {
   color: hsl(0, 0%, 20%);
   margin-top: 1rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: none;
 }
 
-.foot a {
+.foot a p {
   text-decoration: none;
   color: hsl(0, 0%, 28%);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
 }
